testsuite/bsc.names/portRenaming/invalidAttrs/port/DuplicateValue.bsv

interface Ifc;
 method Action check ((* port="arg" *)Bool x, (* port="arg" *)Bool y);
endinterface

